--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jsdoc": "^3.6.11"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:docs" : "jsdoc -c jsdoc.json ./src/index.js"
   },
   "repository": {
     "type": "git",
