--- a/package.json
+++ b/package.json
@@ -1,37 +1,15 @@
 {
-  "name": "wanted-pre-onboarding-challenge-fe-2",
+  "name": "wanted-pre-onboarding-challenge-fe-2/gahuiyeom",
   "version": "1.0.0",
   "description": "프리온보딩 프론트엔드 챌린지[사전과제]",
   "main": "index.js",
-  "dependencies": {
-    "argparse": "^2.0.1",
-    "bluebird": "^3.7.2",
-    "catharsis": "^0.9.0",
-    "entities": "^2.1.0",
-    "escape-string-regexp": "^2.0.0",
-    "graceful-fs": "^4.2.10",
-    "js2xmlparser": "^4.0.2",
-    "klaw": "^3.0.0",
-    "linkify-it": "^3.0.3",
-    "lodash": "^4.17.21",
-    "markdown-it": "^12.3.2",
-    "markdown-it-anchor": "^8.6.4",
-    "marked": "^4.1.0",
-    "mdurl": "^1.0.1",
-    "mkdirp": "^1.0.4",
-    "requizzle": "^0.2.3",
-    "strip-json-comments": "^3.1.1",
-    "taffydb": "^2.6.2",
-    "uc.micro": "^1.0.6",
-    "underscore": "^1.13.4",
-    "xmlcreate": "^2.0.4"
-  },
   "devDependencies": {
-    "jsdoc": "^3.6.11"
+    "jsdoc": "^3.6.11",
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:docs" : "jsdoc -c jsdoc.json ./src/index.js"
+    "build:docs": "jsdoc -c jsdoc.json ./src/index.js"
   },
   "repository": {
     "type": "git",
